syntax = "proto3";
package ProtoBufDemo.DTOs;

message WeatherForecast {
   int64 DateSerialized = 1;
   int32 TemperatureC = 2;
   WeatherForecastSummary Summary = 3;
}
enum WeatherForecastSummary {
   Freezing = 0;
   Bracing = 1;
   Chilly = 2;
   Cool = 3;
   Mild = 4;
   Warm = 5;
   Balmy = 6;
   Hot = 7;
   Sweltering = 8;
   Scorching = 9;
}
